Link inside button firefox error fixed

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -29,6 +29,7 @@ button {
 .btn-like {
   font-size: $font-size-small;
   min-width: 4rem;
+  text-align: center;
 }
 
 
